# fast-psql

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: config.py  database.py  dependency.py  errors.py  main.py  models.py  repository.py  routes.py  schemas.py  service.py
tests/: test_main.py
